welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:21: error: not found: value baisseBrosses
  baisseBrosses()
  ^